[package]
name = "WorldWidePPuli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
indicatif = "0.17.1"
linecount = "0.1.0"
petgraph = "0.6.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
urlencoding = "2.1.2"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
http = "0.2.8"